AUTHORS: add a Contributors section

--- a/AUTHORS
+++ b/AUTHORS
@@ -6,3 +6,6 @@ Original Authors
 ----------------
 Ben LeMasurier	<blemasurier@digitalocean.com>
 Matt Layher	<mlayher@digitalocean.com>
+
+Contributors
+------------
