Adding Luis Sagastume to AUTHORS

--- a/AUTHORS
+++ b/AUTHORS
@@ -10,3 +10,4 @@ Matt Layher	<mlayher@digitalocean.com>
 Contributors
 ------------
 Justin Kim      <justin@digitalocean.com>
+Luis Sagastume  <lsagastume1990@gmail.com>
