Update AUTHORS as per contributing guide

--- a/AUTHORS
+++ b/AUTHORS
@@ -10,3 +10,4 @@ Matt Layher	<mlayher@digitalocean.com>
 Contributors
 ------------
 Justin Kim      <justin@digitalocean.com>
+Nedim Dedic     <nedim_dedic@yahoo.com>
