qemu: implement Domain.CPUs
* Implement CPU domain method which wraps "query-cpus" QMP command
* Implement CPU Halted test
* Update AUTHORS as per contributing guide

--- a/AUTHORS
+++ b/AUTHORS
@@ -11,3 +11,4 @@ Contributors
 ------------
 Justin Kim      <justin@digitalocean.com>
 Luis Sagastume  <lsagastume1990@gmail.com>
+Nedim Dedic     <nedim_dedic@yahoo.com>
