--- a/AUTHORS
+++ b/AUTHORS
@@ -12,3 +12,4 @@ Contributors
 Justin Kim      <justin@digitalocean.com>
 Luis Sagastume  <lsagastume1990@gmail.com>
 Nedim Dedic     <nedim_dedic@yahoo.com>
+Roberto J Rojas <robertojrojas@gmail.com>
