--- a/AUTHORS
+++ b/AUTHORS
@@ -9,6 +9,7 @@ Matt Layher	<mlayher@digitalocean.com>
 
 Contributors
 ------------
+David Anderson  <dave@natulte.net>
 Justin Kim      <justin@digitalocean.com>
 Luis Sagastume  <lsagastume1990@gmail.com>
 Nedim Dedic     <nedim_dedic@yahoo.com>
