--- a/AUTHORS
+++ b/AUTHORS
@@ -14,3 +14,4 @@ Justin Kim      <justin@digitalocean.com>
 Luis Sagastume  <lsagastume1990@gmail.com>
 Nedim Dedic     <nedim_dedic@yahoo.com>
 Roberto J Rojas <robertojrojas@gmail.com>
+Marko Mudrinic  <mudrinic.mare@gmail.com>
