According to contrin, add myself as author.

--- a/AUTHORS
+++ b/AUTHORS
@@ -15,3 +15,4 @@ Luis Sagastume  <lsagastume1990@gmail.com>
 Nedim Dedic     <nedim_dedic@yahoo.com>
 Roberto J Rojas <robertojrojas@gmail.com>
 Marko Mudrinic  <mudrinic.mare@gmail.com>
+Markus Freitag <fmarkus@mailbox.org>
